--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css?family=Open Sans');
+.navbar{
+  box-sizing: border-box;
+border-bottom: 1px solid rgba(217, 217, 217, 0.2);
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
 
 .opensans{
   font-family: 'Open Sans';
@@ -46,4 +51,17 @@ border-radius: 40px;
 }
 .addshadow{
   text-shadow: 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+.articalbox{
+width: 420px;
+height: 528px;
+/* white */
+background: #FFFFFF;
+box-shadow: 4px 4px 0px rgba(0, 0, 0, 0.25);
+border-radius: 20px;
+}
+.link{
+}
+.link:hover{
+  filter: drop-shadow(0px 4px 0px rgba(0, 0, 0, 0.25)) drop-shadow(0px 1px 0px rgba(0, 0, 0, 0.25));
 }
