--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css?family=Open Sans');
+@import url('https://fonts.googleapis.com/css?family=Bai Jamjuree');
 .navbar{
   box-sizing: border-box;
 border-bottom: 1px solid rgba(217, 217, 217, 0.2);
@@ -10,7 +10,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .opensans{
-  font-family: 'Open Sans';
+  font-family: 'Bai Jamjuree';
 }
 .mainbutton{
   display: flex;
@@ -63,5 +63,5 @@ border-radius: 20px;
 .link{
 }
 .link:hover{
-  filter: drop-shadow(0px 4px 0px rgba(0, 0, 0, 0.25)) drop-shadow(0px 1px 0px rgba(0, 0, 0, 0.25));
+  color: #0C294B;
 }
