--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,7 +10,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .opensans{
-  font-family: 'Bai Jamjuree';
+  font-family: 'Noto Sans Thai';
 }
 .mainbutton{
   display: flex;
@@ -37,12 +37,6 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   background: white;
 }
 .socialpc{
-display: flex;
-flex-direction: row;
-align-items: flex-start;
-padding: 14px;
-gap: 20px;
-height: 80px;
 /* white */
 
 background: #FFFFFF;
@@ -64,4 +58,26 @@ border-radius: 20px;
 }
 .link:hover{
   color: #0C294B;
+}
+.outlineadd{
+    text-shadow:
+        1px 1px 0 white,
+      -2px -2px 0 white,  
+       2px -2px 0 white,
+       -2px 2px 0 white,
+        2px 2px 0 white;
+    }
+.bgfilter{
+  background: linear-gradient(180deg, rgba(0, 187, 234, 0.25) 0%, rgba(0, 187, 234, 0) 100%);
+}
+
+@media only screen and (max-width: 640px) {
+  .outlineadd{
+    text-shadow:
+        1px 1px 0 white,
+      -1px -1px 0 white,  
+       1px -1px 0 white,
+       -1px 1px 0 white,
+        1px 1px 0 white;
+    }
 }
